--- a/Graphs/1_basic_greeter.ipynb
+++ b/Graphs/1_basic_greeter.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "fcc4e2c7",
    "metadata": {},
    "outputs": [],
@@ -35,6 +35,9 @@
     "\n",
     "# greet_user is a function that takes the current state and adds a greeting message to it.\n",
     "def greet_user(state: AgentState) -> AgentState:\n",
+    "    \"\"\"\n",
+    "    A simple function that adds a greeting message to the state.\n",
+    "    \"\"\"\n",
     "    state['message'] = \"Hello! \" + state['message'] + \"! How can I assist you today?\"\n",
     "    return state"
    ]
