--- a/Exercise/1_Graph1.ipynb
+++ b/Exercise/1_Graph1.ipynb
@@ -5,7 +5,7 @@
    "id": "c94e384a",
    "metadata": {},
    "source": [
-    "# Exercise 1"
+    "# Exercise 1: Create a StateGraph with single input"
    ]
   },
   {
