--- a/Exercise/3_Graph3.ipynb
+++ b/Exercise/3_Graph3.ipynb
@@ -35,14 +35,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f20582a3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "id": "21722640",
    "metadata": {},
@@ -138,8 +130,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "langchain (3.13.1)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
