Update output comment in 1_Graph1.ipynb to reflect user input response

--- a/Exercise/1_Graph1.ipynb
+++ b/Exercise/1_Graph1.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "28a05e3a",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
     }
    ],
    "source": [
-    "result['name']  # This should output: \"Hello! Bob! How can I assist you today?\""
+    "result['name']  # This should output: \"Bob, you're doing an amazing job learning LangGraph!\""
    ]
   }
  ],
